Integração com a API

--- a/interface/index.html
+++ b/interface/index.html
@@ -10,12 +10,12 @@
 <body>
     <aside id="menu">
         <ul id="menu_items">
-            <li class="selected">Todos</li>
-            <li>Ação</li>
-            <li>Comédia</li>
-            <li>Romance</li>
-            <li>Terror</li>
-            <li>Outros</li>
+            <li id="all">Todos</li>
+            <li id="acao">Ação</li>
+            <li id="comedia">Comédia</li>
+            <li id="romance">Romance</li>
+            <li id="terror">Terror</li>
+            <li id="outros">Outros</li>
         </ul>
     </aside>
 
