Apenas 10 filmes por query

--- a/interface/index.html
+++ b/interface/index.html
@@ -19,28 +19,7 @@
         </ul>
     </aside>
 
-    <main id="filmes">
-        <div class="filme">
-            <div class="capa"></div>
-            <div class="titulo">
-                Os Vingadores (2012)
-            </div>
-        </div>
-
-        <div class="filme">
-            <div class="capa"></div>
-            <div class="titulo">
-                Os Vingadores (2012)
-            </div>
-        </div>
-
-        <div class="filme">
-            <div class="capa"></div>
-            <div class="titulo">
-                Os Vingadores (2012)
-            </div>
-        </div>
-    </main>
+    <main id="filmes"></main>
 
     <script src="app.js"></script>
 </body>
